# comp5421

./: .~lock.phase1-report.odt#  README  phase1-report.odt
build-phase1/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  moc_mainwindow.cpp  project1  ui_mainwindow.h
build-phase1/.csettings/: cdt.managedbuild.toolchain.gnu.base.257520949_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.base.257520949_org.eclipse.cdt.core.settings
phase1/: CMakeLists.txt  FeatureDetection.cpp  FeatureDetection.hpp  QCVTool.cpp  QCVTool.h  cvtool.cpp  cvtool.h  harris.h  main.cpp  region  test_opencv.cpp
phase1/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  phase1-ui.pro
